<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/set_goal_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/set_goal_String"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/activity_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/demo_activty"/>
        <LinearLayout
            android:id="@+id/activity_time_linearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/activity_hour_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hour_string"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dialog_time_text_size"/>
            <TextView
                android:id="@+id/activity_H_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/H_string"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/activity_minute_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hour_string"
                android:textSize="@dimen/dialog_time_text_size"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/activity_M_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/M_string"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        grid:alignmentMode="alignBounds"
        grid:columnCount="3">

        <Button android:layout_width="0dp"
            android:id="@+id/buttonOne"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:text="@string/one"
            android:textSize="@dimen/time_dialog_number_font"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonTwo"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:text="@string/two"
            android:textSize="@dimen/time_dialog_number_font"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonThree"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:text="@string/three"
            android:textSize="@dimen/time_dialog_number_font"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonFour"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:text="@string/four"
            android:textSize="@dimen/time_dialog_number_font"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonFive"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            android:text="@string/five"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonSix"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:text="@string/six"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonSeven"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:text="@string/seven"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonEight"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:text="@string/eight"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonNine"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:text="@string/nine"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <Button android:layout_width="0dp"
            android:id="@+id/buttonZero"
            style="?buttonStyle"
            android:layout_height="0dp"
            android:text="@string/zero"
            android:textSize="@dimen/time_dialog_number_font"
            android:background="@color/colorAccent"
            grid:layout_columnWeight="1"
            app:layout_column="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>
        <ImageButton android:layout_width="0dp"
            android:id="@+id/buttonBackspace"
            style="?buttonStyle"
            android:layout_height="0dp"
            grid:layout_columnWeight="1"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_backspace"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill"/>


    </android.support.v7.widget.GridLayout>

</LinearLayout>