<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/dialog_hour_textview"
            android:layout_width="@dimen/time_dialog_edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hour_string"
            android:inputType="number"
            android:gravity="end"
            android:selectAllOnFocus="true"
            android:maxLength="2"
            android:textSize="@dimen/dialog_time_text_size"/>
        <TextView
            android:id="@+id/dialog_activity_H_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/H_string"/>
        <EditText
            android:id="@+id/dialog_minute_textview"
            android:layout_width="@dimen/time_dialog_edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hour_string"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:gravity="end"
            android:textSize="@dimen/dialog_time_text_size"/>
        <TextView
            android:id="@+id/dialog_M_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/M_string"/>

    </LinearLayout>

</RelativeLayout>
